# naive-config-sync

./: README.md  pyproject.toml  sync_config.yaml.example
src/naive_config_sync/: cli.py  filesync.py  rule.py
